# hxrandr

./: .gitignore  changelog.md  hxrandr.cabal  make
proto/XRandR/: Paths.hs
src/: XRandR.hs
src/XRandR/: Paths.hs  Types.hs
src/XRandR/T/: TestData.hs
t/: hxrandr.hs
