name:                hxrandr

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0
synopsis:            interface & tools for xrandr
description:         interface & tools for xrandr
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    XRandR
  other-modules:      XRandR.Paths, XRandR.T.TestData, XRandR.Types
  default-extensions: ImportQualifiedPost
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , QuasiQuotes
                    , TypeApplications

  build-depends:      base, base-unicode-symbols, charset, logging-effect
                    , optparse-applicative, parsers, text, text-printer, trifecta

                    , base1t        >= 0.0.6.0
                    , fpath         >= 1.3.4.0
                    , log-plus      >= 0.0.4.4
                    , mockio        >= 0.0.5.0
                    , mockio-log    >= 0.1.3.0
                    , monadio-plus  >= 2.5.3.0
                    , stdmain       >= 1.6.2.0
                    , textual-plus  >= 1.1.4.0
                    , trifecta-plus >= 0.0.1.0

  hs-source-dirs:      src
  default-language:    Haskell2010

--------------------------------------------------------------------------------

test-suite test
  -- add  -rtsopts -prof -auto-all  for profiling
  ghc-options:         -W -Wall -fhelpful-errors
  type:                exitcode-stdio-1.0
  main-is:             hxrandr.hs
  hs-source-dirs:      t
  build-depends:       base, tasty

                     , hxrandr
  default-extensions:  NoImplicitPrelude
  default-language:    Haskell2010

--------------------------------------------------------------------------------
